[gd_scene load_steps=12 format=2]

[ext_resource path="res://resources/NicoFontPack-v1.0/Base Font Files/NicoBold/NicoBold-Monospaced.woff2" type="DynamicFontData" id=1]
[ext_resource path="res://Scenes/UI/Main_menu.gd" type="Script" id=2]
[ext_resource path="res://resources/theme.tres" type="Theme" id=3]
[ext_resource path="res://assets/map1/2 Background/Overlay_illumination.png" type="Texture" id=4]
[ext_resource path="res://assets/map1/2 Background/Night/1.png" type="Texture" id=5]
[ext_resource path="res://Scenes/Heroes/AnimatedHeroes/AnimatedWooly.tscn" type="PackedScene" id=6]
[ext_resource path="res://Scenes/Heroes/AnimatedHeroes/AnimatedPinky.tscn" type="PackedScene" id=7]
[ext_resource path="res://assets/sound effects/Intro Theme.mp3" type="AudioStream" id=8]
[ext_resource path="res://Scenes/Heroes/AnimatedHeroes/AnimatedBluey.tscn" type="PackedScene" id=9]

[sub_resource type="DynamicFont" id=1]
size = 34
outline_size = 4
outline_color = Color( 0.0352941, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxEmpty" id=2]

[node name="Main_menu" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = 45.0
theme = ExtResource( 3 )
script = ExtResource( 2 )
__meta__ = {
"_edit_horizontal_guides_": [ -20.0 ]
}

[node name="intro_theme" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
volume_db = -8.0
autoplay = true

[node name="Background" type="Sprite" parent="."]
position = Vector2( 225, 140 )
scale = Vector2( 0.995833, 1.00458 )
texture = ExtResource( 5 )

[node name="OverlayIllumination" type="Sprite" parent="."]
position = Vector2( 214, 146 )
scale = Vector2( 0.239444, 0.283333 )
texture = ExtResource( 4 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 25.0
margin_top = 25.0
margin_right = 395.0
margin_bottom = 320.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 5
size_flags_vertical = 5

[node name="Label" type="Label" parent="VBoxContainer"]
margin_right = 370.0
margin_bottom = 73.0
custom_fonts/font = SubResource( 1 )
text = "Happy fall friends!"
align = 1
autowrap = true

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
visible = false
margin_top = 77.0
margin_right = 370.0
margin_bottom = 127.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 5
theme = ExtResource( 3 )
custom_constants/separation = 50
custom_styles/separator = SubResource( 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer"]
margin_top = 77.0
margin_right = 370.0
margin_bottom = 241.0

[node name="Play" type="Button" parent="VBoxContainer/VBoxContainer"]
margin_right = 370.0
margin_bottom = 38.0
size_flags_horizontal = 5
size_flags_vertical = 5
toggle_mode = true
text = "Play"
icon_align = 1

[node name="Tutorial" type="Button" parent="VBoxContainer/VBoxContainer"]
margin_top = 42.0
margin_right = 370.0
margin_bottom = 80.0
size_flags_horizontal = 5
size_flags_vertical = 5
toggle_mode = true
text = "Tutorial"
icon_align = 1

[node name="Credits" type="Button" parent="VBoxContainer/VBoxContainer"]
margin_top = 84.0
margin_right = 370.0
margin_bottom = 122.0
size_flags_horizontal = 5
size_flags_vertical = 5
toggle_mode = true
text = "Credits"

[node name="Exit" type="Button" parent="VBoxContainer/VBoxContainer"]
margin_top = 126.0
margin_right = 370.0
margin_bottom = 164.0
size_flags_horizontal = 5
size_flags_vertical = 5
text = "Exit"

[node name="AnimationsContainer" type="Node2D" parent="."]

[node name="AnimatedBluey" parent="AnimationsContainer" instance=ExtResource( 9 )]
position = Vector2( 362, 87 )
rotation = 3.14159
scale = Vector2( 3.5, -3.5 )
animation = "throw"
frame = 2
playing = false

[node name="AnimatedPinky" parent="AnimationsContainer" instance=ExtResource( 7 )]
position = Vector2( 342, 207 )
scale = Vector2( 3.5, 3.5 )
frame = 3

[node name="AnimatedWooly" parent="AnimationsContainer" instance=ExtResource( 6 )]
position = Vector2( 65, 126 )
scale = Vector2( 3.5, 3.5 )
frame = 3
